# chronos-lite

./: .editorconfig  .gitignore  00-prototype-linopy.ipynb  README.md  example.ipynb  example.py  main.py  pyproject.toml
chronos/: __init__.py
chronos/lite/: __init__.py  data.py  model.py  plot.py
chronos/lite/tests/: test_data.py  test_model.py
chronos/lite/tests/test_files/: test_30min_market_data.csv  test_60min_market_data.csv  test_battery_config.csv
data/: battery_parameters.csv
data/raw/: half-hourly-market.csv  hourly-market.csv
