[project]
name = "chronos-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "highspy>=1.11.0",
    "linopy>=0.5.7",
    "pandas>=2.3.2",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "chronos-lite",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pip>=25.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "taskipy>=1.14.1",
    "ty>=0.0.1a21",
    "xarray>=2025.9.0",
]

[tool.taskipy.tasks]
qa = "task test && task lint && task typecheck"
test = "python -m pytest"
lint = "ruff check"
typecheck = "ty check ."
fix = "ruff check --fix"
format = "ruff format"

[tool.uv.sources]
chronos-lite = { workspace = true }
